# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/power_manager/powermgr.gni")

config("powermgr_private_config") {
  include_dirs = [
    "${powermgr_service_path}/zidl/include",
    "//utils/system/safwk/native/include",
  ]
}

config("powermgr_public_config") {
  include_dirs = [ "native/include" ]
}

ohos_shared_library("powermgr_client") {
  sources = [
    "${powermgr_framework_path}/native/power_mgr_client.cpp",
    "${powermgr_framework_path}/native/running_lock.cpp",
    "${powermgr_framework_path}/native/running_lock_info.cpp",
    "${powermgr_framework_path}/native/running_lock_token_stub.cpp",
    "${powermgr_service_path}/zidl/src/power_mgr_proxy.cpp",
    "${powermgr_service_path}/zidl/src/power_mode_callback_proxy.cpp",
    "${powermgr_service_path}/zidl/src/power_shutdown_callback_proxy.cpp",
    "${powermgr_service_path}/zidl/src/power_state_callback_proxy.cpp",
  ]

  configs = [
    "${powermgr_utils_path}:utils_config",
    ":powermgr_private_config",
  ]

  public_configs = [ ":powermgr_public_config" ]

  deps = [
    "${powermgr_utils_path}:powermgr_utils",
    "//foundation/aafwk/standard/tools/aa:tools_aa_source_set",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "appexecfwk_standard:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  part_name = "${powermgr_native_part_name}"
}
