# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")

group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    "asyncshutdowncallback_fuzzer:AsyncShutdownCallbackFuzzTest",
    "createrunninglock_fuzzer:CreateRunningLockFuzzTest",
    "forcesuspenddevice_fuzzer:ForceSuspendDeviceFuzzTest",
    "getsetdevicemode_fuzzer:GetSetDeviceModeFuzzTest",
    "getstate_fuzzer:GetStateFuzzTest",
    "hibernate_fuzzer:HibernateFuzzTest",
    "iscollaborationscreenon_fuzzer:IsCollaborationScreenOnFuzzTest",
    "isfoldscreenon_fuzzer:IsFoldScreenOnFuzzTest",
    "isrunninglocktypesupported_fuzzer:IsRunningLockTypeSupportedFuzzTest",
    "isscreenon_fuzzer:IsScreenOnFuzzTest",
    "isstandby_fuzzer:IsStandbyFuzzTest",
    "lockscreenaftertimingout_fuzzer:LockScreenAfterTimingOutFuzzTest",
    "lockunlockisused_fuzzer:LockUnLockIsUsedFuzzTest",
    "overridescreenofftime_fuzzer:OverrideScreenOffTimeFuzzTest",
    "powermodecallback_fuzzer:PowerModeCallbackFuzzTest",
    "powerstatecallback_fuzzer:PowerStateCallbackFuzzTest",
    "proxyrunninglock_fuzzer:ProxyRunningLockFuzzTest",
    "proxyrunninglocks_fuzzer:ProxyRunningLocksFuzzTest",
    "queryrunninglocklists_fuzzer:QueryRunningLockListsFuzzTest",
    "rebootdevice_fuzzer:RebootDeviceFuzzTest",
    "refreshactivity_fuzzer:RefreshActivityFuzzTest",
    "releaserunninglock_fuzzer:ReleaseRunningLockFuzzTest",
    "resetrunninglocks_fuzzer:ResetRunningLocksFuzzTest",
    "runninglockcallback_fuzzer:RunningLockCallbackFuzzTest",
    "screenstatecallback_fuzzer:ScreenStateCallbackFuzzTest",
    "setdisplaysuspend_fuzzer:SetDisplaySuspendFuzzTest",
    "setforcetimingout_fuzzer:SetForceTimingOutFuzzTest",
    "setsuspendtag_fuzzer:SetSuspendTagFuzzTest",
    "shelldump_fuzzer:ShellDumpFuzzTest",
    "shutdowndevice_fuzzer:ShutDownDeviceFuzzTest",
    "suspenddevice_fuzzer:SuspendDeviceFuzzTest",
    "synchibernatecallback_fuzzer:SyncHibernateCallbackFuzzTest",
    "syncshutdowncallback_fuzzer:SyncShutdownCallbackFuzzTest",
    "syncsleepcallback_fuzzer:SyncSleepCallbackFuzzTest",
    "takeovershutdowncallback_fuzzer:TakeOverShutdownCallbackFuzzTest",
    "wakeupdevice_fuzzer:WakeupDeviceFuzzTest",
  ]
}
